added graphql endpoint through appsync; need to add queries of data

--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "aws-appsync": "^3.0.3",
+    "aws-appsync-react": "^3.0.3",
     "aws-sdk": "^2.691.0",
     "bootstrap": "^4.5.0",
+    "graphql-tag": "^2.10.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-apollo": "^2.5.8",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
