--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/node": "^12.12.47",
+    "@types/react": "^16.9.36",
     "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "aws": "0.0.3-2",
     "aws-appsync": "^3.0.3",
     "aws-appsync-react": "^3.0.3",
-    "aws-sdk": "^2.691.0",
+    "aws-sdk": "^2.694.0",
     "bootstrap": "^4.5.0",
+    "formik": "^2.1.4",
     "graphql-tag": "^2.10.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
