--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react-router": "^5.1.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
     "aws": "0.0.3-2",
     "aws-appsync": "^3.0.3",
     "aws-appsync-react": "^3.0.3",
